--- a/_config.yml
+++ b/_config.yml
@@ -36,5 +36,5 @@ collections:
     permalink: :collection/:title/
   posts:
     permalink: :year/:month/:day/:title/
-
-baseurl: /rubytest
+# 
+# baseurl: /rubytest
