file fix attempt #3

--- a/_config.yml
+++ b/_config.yml
@@ -36,5 +36,9 @@ collections:
     permalink: :collection/:title/
   posts:
     permalink: :year/:month/:day/:title/
+  files:
+    collections_dir: _directory
+    output: true
+    permalink: :collection/:title/
 
 baseurl: /rubytest
