fixed files page

--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,11 @@ defaults:
       layout: "work"
   - scope:
       path: ""
+      type: "file"
+    values:
+      layout: "file"      
+  - scope:
+      path: ""
     values:
       layout: basic
 
