--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ plugins:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-seo-tag
+  - jekyll-katex
 
 collections:
   essays:
@@ -46,6 +47,6 @@ collections:
 
 baseurl: /rubytest
 
-markdown: kramdown
-kramdown:
-  math_engine: mathjax
+# markdown: kramdown
+# kramdown:
+#   math_engine: mathjax
